--- a/src/app/registro/pages/crud/crud.component.html
+++ b/src/app/registro/pages/crud/crud.component.html
@@ -31,6 +31,8 @@
           <button (click)="eliminarUsuario(usuario._id!)">Eliminar</button>
         </td>
       </tr>
+      <button (click)="descargarRegistrosPDF()">Descargar PDF</button>
+
     </tbody>
   </table>
 </div>
